--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
 		"axios": "^0.27.2",
 		"jwt-decode": "^3.1.2",
 		"moment": "^2.29.3",
+		"npm": "^8.13.2",
 		"react": "^18.1.0",
 		"react-dom": "^18.1.0",
 		"react-file-base64": "^1.0.3",
