--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,3 @@
 PORT = 5000
 mongooseCon_URL = mongodb+srv://MERN_PROJECT:MERN_PROJECT_123@cluster0.k0inq.mongodb.net/?retryWrites=true&w=majority
+JWT_SECRET = secret
