--- a/server/package.json
+++ b/server/package.json
@@ -13,9 +13,11 @@
 	"dependencies": {
 		"bcryptjs": "^2.4.3",
 		"body-parser": "^1.20.0",
+		"cookie-parser": "^1.4.6",
 		"cors": "^2.8.5",
 		"dotenv": "^16.0.1",
 		"express": "^4.18.1",
+		"jsonwebtoken": "^8.5.1",
 		"moongose": "^1.0.0",
 		"nodemon": "^2.0.18",
 		"uuid": "^8.3.2"
